--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
 
   <head>
     <link rel="stylesheet" href="./style.css">
-    <script src="http://unpkg.com/tone"></script>
-    <script src="https://unpkg.com/@tonejs/midi"></script>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="force-graph.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/tone"></script>
+    <script type="text/javascript" src="https://unpkg.com/@tonejs/midi"></script>
+    <script type="text/javascript" src="https://d3js.org/d3.v7.min.js"></script>
     <script src="markov-explorer.js"></script>
   </head>
   <body>
