--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
 <div>
 <h1 id="markov-chains">Markov Chains</h1>
-<h2 id="where-markov-chains-are">Where Markov Chains Are</h2>
+<!--<h2 id="where-markov-chains-are">Where Markov Chains Are</h2>-->
 <p>Markov chains might be thought of as a satellite planet in a cluster of curious phenomena revolving around chance and probabilites. In this way, one could map constellations with other orbiting bodies such as language, music, Google's PageRank algorithm, Stable Diffusion, and even psychoanalysis.</p>
 <h2 id="what-a-markov-chain-is-and-isnt">What a Markov Chain is (and isn't)</h2>
 <p>A Markov chain enocdes or describes a <strong>sequence</strong> of <strong>states</strong> and their <strong>transitions</strong> from one to the next. A 'state' can be a rather abstract term, but can be thought of as whatever the current value of something that changes currently is. Say, like the weather, our mood, or what activity we a currently up to. One of the first and enduring applications of this idea was to apply it to text; a sequence of letters or words. A Markov chain or <strong>model</strong> of a sequence is simply the record of the of the changes in that sequence, stored as <strong>probabilities</strong>.</p>
